--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 <body>
 
 <!-- Logos maiores, afastadas 20% da lateral esquerda, com animação -->
-<img src="steam.png" alt="Logo 1" class="logo-lateral logo-animada" style="top: 20%; left: 5%; animation-delay: 0s;">
-<img src="044.png" alt="Logo 2" class="logo-lateral logo-animada" style="top: 60%; left: 5%; animation-delay: 1.5s;">
+<img src="./img/steam.png" alt="Logo 1" class="logo-lateral logo-animada" style="top: 20%; left: 5%; animation-delay: 0s;">
+<img src="./img/044.png" alt="Logo 2" class="logo-lateral logo-animada" style="top: 60%; left: 5%; animation-delay: 1.5s;">
 
 <div class="container">
   <h1>Mega Chocolateria <br> Estudantes: Alessandra, Ana Carolina, Lorena e Walisson</h1>
